fix(popup): hide scrollbars

--- a/src/components/Popup/index.scss
+++ b/src/components/Popup/index.scss
@@ -23,10 +23,14 @@
     border-radius: 8px;
     //transition: opacity .1s ease-in-out;
     //z-index: 3;
-    &--hide-scroll {
+    &--hide-vertical-scroll {
       &::-webkit-scrollbar {
-        width: 0;
-        height: 0;
+        width: 0 !important;
+      }
+    }
+    &--hide-horizontal-scroll {
+      &::-webkit-scrollbar {
+        height: 0 !important;
       }
     }
   }
